<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="setting">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="find">Поиск</string>
    <string name="dark_themes">Темная тема</string>
    <string name="support">Написать в поддержку</string>
    <string name="share">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поисковый запрос</string>
    <string name="share_link" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="emai_from" translatable="false">abdel.eid@yandex.ru</string>
    <string name="email_title">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_body">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. \nПроверьте подключение к интернету.</string>
    <string name="refresh">Обновить</string>
    <string name="clear_hist">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="zero_time_format_mm_ss" translatable="false">00:00</string>
</resources>